# gts-rust

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: 001-gts-schema-derive-macro-adr.md  001-macro-alignment-adr.md  001-macro-alignment-implementation-plan.md  001-macro-proposal.md  002-macro-migration-implementation-plan.md  002-struct-to-gts-schema-migration.md
gts/: Cargo.toml
gts-cli/: Cargo.toml
gts-cli/src/: cli.rs  gen_common.rs  gen_schemas.rs  server.rs
gts-cli/tests/: cli_run_tests.rs  gen_instances_tests.rs
gts-dylint/: Cargo.toml  README.md  rust-toolchain.toml
gts-dylint/examples/: no_trigger_gts_id.rs  no_trigger_gts_instance.rs  no_trigger_gts_instance_raw.rs  no_trigger_non_gts.rs  no_trigger_struct_to_gts_schema.rs  no_trigger_with_allow.rs  trigger_concat.rs  trigger_concat.stderr  trigger_gts_instance.rs  trigger_gts_instance.stderr  trigger_gts_instance_raw.rs  trigger_gts_instance_raw.stderr  trigger_gts_prefix.rs  trigger_gts_prefix.stderr  trigger_struct_to_gts_schema.rs  trigger_struct_to_gts_schema.stderr
gts-dylint/src/: lib.rs
gts-id/: Cargo.toml  README.md  build.rs
gts-id/src/: error.rs  gts_id.rs  gts_id_pattern.rs  gts_id_segment.rs  gts_id_wildcard.rs  gts_wildcard.rs  lib.rs  parse.rs  prefix.rs
gts-macros/: Cargo.toml  README.md
gts-macros-cli/: Cargo.toml  README.md
gts-macros-cli/src/: main.rs
gts-macros/src/: gts_attrs.rs  gts_codegen.rs  gts_field_attrs.rs  gts_schema_derive.rs  gts_serde.rs  gts_validation.rs  id_arg.rs  (+2 more)
gts-validator/: Cargo.toml
(+267 files in other folders)
