[package]
name = "gts-dylint"
version = "0.11.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "6.0"

[dev-dependencies]
dylint_testing = "6.0"
gts-macros = { path = "../gts-macros" }
gts = { path = "../gts" }
gts-id = { path = "../gts-id" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

[workspace]
