[package]
name = "gts-id"
version = "0.11.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GTS ID validation and parsing primitives"
keywords = ["gts"]
categories.workspace = true
readme.workspace = true
publish = true

[lints]
workspace = true

[features]
# Opt-in deterministic UUID v5 derivation (`GtsID::to_uuid`). Off by default so
# parsing-only consumers — notably the `gts-macros` proc-macro crate — don't pull
# `uuid` into their build graph or couple their semver to it.
uuid = ["dep:uuid"]

[dependencies]
thiserror.workspace = true
uuid = { workspace = true, optional = true }
